I solved some bugs inside the dad jokes project The src element should be display ok on any screen , and the main container is now centret on the page But i left some junk behind me for the transition from pure css to Bootstrap

--- a/pages/dad_Jokes/style.css
+++ b/pages/dad_Jokes/style.css
@@ -6,6 +6,8 @@ body {
   font-family: "Source Code Pro", monospace;
   display: flex;
   background: lightyellow;
+  padding: 10px;
+  transition: all ease-in;
 }
 main {
   margin: auto;
@@ -49,6 +51,7 @@ button {
   position: absolute;
   bottom: 0px;
   right: 0px;
+  padding-right: 10px;
 }
 .src a {
   color: var(--p);
